fix: footer overlap bug

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -235,10 +235,8 @@ hr {
 }
 
 footer {
-  width:270px;
-  /*float:left;*/
-  position:fixed;
-  bottom:50px;
+  position: fixed;
+  height: 150px;
 }
 
 @media print, screen and (max-width: 960px) {
